--- a/style.css
+++ b/style.css
@@ -7,18 +7,16 @@ body {
     text-align: center;
 }
 
-
-.title {
+title, .tp-section h2, .mission-section h2 {
     background-color: transparent;
     color: white;
-    font-size: 36px;
+    font-size: 36px; 
     font-weight: bold;
     text-transform: uppercase;
     margin-top: 50px;
 }
 
-
-.sommaire {
+.sommaire, .tp-section, .mission-section {
     margin: 50px auto;
     padding: 20px;
     max-width: 800px;
@@ -28,8 +26,7 @@ body {
     backdrop-filter: blur(10px);
 }
 
-
-.sommaire h3 a {
+.sommaire h3 a, .tp-section .link-container h3 a, .mission-section .link-container h3 a {
     text-decoration: none;
     color: #00aaff;
     font-size: 22px;
@@ -38,7 +35,26 @@ body {
     transition: 0.3s;
 }
 
-.sommaire h3 a:hover {
+.sommaire h3 a:hover, .tp-section .link-container h3 a:hover, .mission-section .link-container h3 a:hover {
     color: #ffaa00;
     text-shadow: 0 0 10px #ffaa00;
+}
+
+a {
+    display: inline-block;
+    margin-top: 20px;
+    color: #00aaff;
+    font-size: 18px;
+    font-weight: bold;
+    text-transform: uppercase;
+    text-decoration: none;
+    padding: 10px 20px;
+    border: 2px solid #00aaff;
+    border-radius: 5px;
+    transition: 0.3s;
+}
+
+a:hover {
+    background-color: #00aaff;
+    color: #000;
 }
